--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="All about cricketers!" content="width=device-width, initial-scale=1.0">
-  <title>All about Cricket!</title>
+  <title>All about Cricket</title>
   <style>
   /* Basic styles for the carousel */
   .carousel {
